首页功能-完成 退出登录功能--完成 用户页面初始化--完成

--- a/public/back/product.html
+++ b/public/back/product.html
@@ -39,7 +39,7 @@
           </div>
         </li>
         <li>
-          <a href="product.html">
+          <a href="product.html" class="current">
             <i class="glyphicon glyphicon-tags"></i>
             <span>商品管理</span>
           </a>
@@ -60,13 +60,9 @@
     <div class="container-fluid">
       <ol class="breadcrumb">
         <li><a href="#">管理系统</a></li>
-        <li class="active">首页</li>
+        <li class="active">商品管理</li>
       </ol>
-      <div class="lt_content">
-        <!--  为 ECharts 准备一个具备大小（宽高）的 DOM - -->
-        <div class="echarts_1 pull-left"></div>
-        <div class="echarts_2 pull-right"></div>
-      </div>
+      
       
     </div>
   </div>
