--- a/public/back/first.html
+++ b/public/back/first.html
@@ -33,8 +33,8 @@
             <i class="glyphicon glyphicon-list"></i>
             <span>分类管理</span>
           </a>
-          <div class="child" style="display:none">
-            <a href="first.html">一级分类</a>
+          <div class="child">
+            <a href="first.html" class="current">一级分类</a>
             <a href="second.html">二级分类</a>
           </div>
         </li>
@@ -60,13 +60,10 @@
     <div class="container-fluid">
       <ol class="breadcrumb">
         <li><a href="#">管理系统</a></li>
-        <li class="active">首页</li>
+        <li class="active">分类管理</li>
+        <li class="active">一级分类</li>
       </ol>
-      <div class="lt_content">
-        <!--  为 ECharts 准备一个具备大小（宽高）的 DOM - -->
-        <div class="echarts_1 pull-left"></div>
-        <div class="echarts_2 pull-right"></div>
-      </div>
+      
       
     </div>
   </div>
