--- a/public/back/second.html
+++ b/public/back/second.html
@@ -59,15 +59,47 @@
     </div>
     <div class="container-fluid">
       <ol class="breadcrumb">
-        <li><a href="#">管理系统</a></li>
+        <li><a href="index.html">管理系统</a></li>
         <li class="active">分类管理</li>
         <li class="active">二级分类</li>
       </ol>
-      
-      
+      <div class="lt_content">
+        <button class="btn btn-default mb_20">添加分类</button>
+        <table class="table table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>序号</th>
+              <th>一级分类名称</th>
+              <th>二级分类名称</th>
+              <th>二级分类LOGO</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+
+        <!-- 分页标签 -->
+        <div class="pull-right">
+          <ul id="paginator"></ul>
+        </div>
+
+      </div>
     </div>
   </div>
 
+  <!-- tbody内容模板引擎 -->
+  <script type="text/template" id="tmp">
+    {{ each rows v i }}
+    <tr>
+      <td>{{ i + 1 +(page-1) *size }}</td>
+      <td>{{ v.categoryName}}</td>
+      <td>{{ v.brandName}}</td>
+      <td>
+        <img src="{{ v.brandLogo }}" height="50">
+      </td>
+    </tr>
+    {{ /each }}
+  </script>
 
   <!-- 模态框 -->
   <div class="modal fade" id="logoutModal" tabindex="-1" >
@@ -95,7 +127,10 @@
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/echarts/echarts.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
+  <script src="./lib/artTemplate/template-web.js"></script>
+  <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
   <script src="./js/common.js"></script>
   <script src="./js/checkoutLogin.js"></script>
+  <script src="./js/second.js"></script>
 </body>
 </html>
