--- a/public/back/index.html
+++ b/public/back/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="container-fluid">
       <ol class="breadcrumb">
-        <li><a href="#">管理系统</a></li>
+        <li><a href="index.html">管理系统</a></li>
         <li class="active">首页</li>
       </ol>
       <div class="lt_content">
