--- a/public/back/user.html
+++ b/public/back/user.html
@@ -60,7 +60,7 @@
     </div>
     <div class="container-fluid">
       <ol class="breadcrumb">
-        <li><a href="#">管理系统</a></li>
+        <li><a href="index.html">管理系统</a></li>
         <li class="active">用户管理</li>
       </ol>
       <div class="lt_content">
