--- a/public/back/second.html
+++ b/public/back/second.html
@@ -7,8 +7,10 @@
   <title>Document</title>
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/index.css">
+
 </head>
 <body>
   <!-- 左侧部分 -->
@@ -64,7 +66,7 @@
         <li class="active">二级分类</li>
       </ol>
       <div class="lt_content">
-        <button class="btn btn-default mb_20">添加分类</button>
+        <button class="btn btn-default mb_20" id="addBtn">添加分类</button>
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
@@ -87,21 +89,57 @@
     </div>
   </div>
 
-  <!-- tbody内容模板引擎 -->
-  <script type="text/template" id="tmp">
-    {{ each rows v i }}
-    <tr>
-      <td>{{ i + 1 +(page-1) *size }}</td>
-      <td>{{ v.categoryName}}</td>
-      <td>{{ v.brandName}}</td>
-      <td>
-        <img src="{{ v.brandLogo }}" height="50">
-      </td>
-    </tr>
-    {{ /each }}
-  </script>
+  
 
-  <!-- 模态框 -->
+  <!-- 添加二级分类模态框 -->
+  <div class="modal fade" id="addModal" tabindex="-1" >
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          <h4 class="modal-title">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+            <form id="form">
+              <div class="form-group">
+                <div class="dropdown">
+                  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                    <span id="dropdownTxt">请选择一级目录</span>  
+                    <span class="caret"></span>
+                  </button>
+                  <!-- 添加hot，设为每个品牌都是热门 1：热门，0：不热门 -->
+                  <input type="hidden" name="hot" value="1">
+                  <ul class="dropdown-menu" >
+                    <!-- 挖个坑 -->
+                  </ul>
+                </div>
+                <input type="hidden" name="categoryId">
+              </div>
+              <div class="form-group">
+                <input type="text" name="brandName"  class="form-control" placeholder="请输入一级分类名称" >
+              </div>
+              <div class="form-group">
+                <label class="btn btn-default" for="fileupload">上传图片</label>
+                <!-- name指定图片上传时的name属性 -->
+                <!-- data-url指定图片上传时的接口地址 -->
+                <!-- multiple指定多文件上传 -->
+                <input id="fileupload" style="display:none" type="file" name="pic1" data-url="/category/addSecondCategoryPic" multiple>
+              </div>
+              <div class="form-group imgBox" >
+                <img  src="./images/none.png" width="100">
+                <input type="hidden" name="brandLogo" >
+              </div>
+            </form>  
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" form="form" class="btn btn-primary" id="add">添加</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <!-- 退出登录模态框 -->
   <div class="modal fade" id="logoutModal" tabindex="-1" >
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -123,8 +161,33 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
+  <!-- tbody内容模板引擎 -->
+<script type="text/template" id="tmp">
+  {{ each rows v i }}
+  <tr>
+    <td>{{ i + 1 +(page-1) *size }}</td>
+    <td>{{ v.categoryName}}</td>
+    <td>{{ v.brandName}}</td>
+    <td>
+      <img src="{{ v.brandLogo }}" height="50">
+    </td>
+  </tr>
+  {{ /each }}
+</script>
+<!-- 下拉列表模板引擎 -->
+<script type="text/html" id="dropdownList">
+  {{ each rows v i}}
+  <li><a href="#" data-id="{{ v.id }}">{{ v.categoryName}}</a></li>
+  {{ /each}}
+</script>
+
+
   <script src="./lib/jquery/jquery.min.js"></script>
+  <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+  <script src="./lib/jquery-fileupload/jquery.iframe-transport.js"></script>
+  <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
   <script src="./lib/echarts/echarts.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
   <script src="./lib/artTemplate/template-web.js"></script>
@@ -132,5 +195,8 @@
   <script src="./js/common.js"></script>
   <script src="./js/checkoutLogin.js"></script>
   <script src="./js/second.js"></script>
+
+
+
 </body>
 </html>
