--- a/public/front/index.html
+++ b/public/front/index.html
@@ -8,15 +8,57 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./lib/mui/css/mui.css">
   <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
+  <link rel="stylesheet" href="./css/common.css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <!-- sui, 妹子ui, layui, mui -->
     <div class="lt_container">
-      <div class="lt_header"></div>
-      <div class="lt_main"></div>
-      <div class="lt_footer"></div>
+      <div class="lt_header">
+        <a href="#" class="icon_left">
+          <i class="fa fa-home"></i>
+        </a>
+        <h3>乐淘云购</h3>
+        <a href="#" class="icon_right">
+          <i class="fa fa-search"></i>
+        </a>
+      </div>
+      <div class="lt_main">111</div>
+      <div class="lt_footer">
+        <ul>
+          <li>
+            <a href="#" class="current">
+              <i class="fa fa-home"></i>
+              <p>首页</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-bars"></i>
+              <p>分类页</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-shopping-cart"></i>
+              <p>购物车</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-user"></i>
+              <p>用户中心</p>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   
+
+<script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/mui/js/mui.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./js/common.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
