--- a/public/front/index.html
+++ b/public/front/index.html
@@ -9,43 +9,161 @@
   <link rel="stylesheet" href="./lib/mui/css/mui.css">
   <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="icon" href="./favicon.ico">
 </head>
 <body>
     <!-- sui, 妹子ui, layui, mui -->
     <div class="lt_container">
+      <!-- 页面头部 -->
       <div class="lt_header">
         <a href="#" class="icon_left">
           <i class="fa fa-home"></i>
         </a>
         <h3>乐淘云购</h3>
-        <a href="#" class="icon_right">
+        <a href="search.html" class="icon_right">
           <i class="fa fa-search"></i>
         </a>
       </div>
-      <div class="lt_main">111</div>
+      <!-- 页面主体部分 -->
+      <div class="lt_main">
+        <div class="mui-scroll-wrapper">
+          <div class="mui-scroll">
+            <!--这里放置真实显示的DOM内容-->
+            <!-- 轮播区域 -->
+            <div class="mui-slider">
+              <div class="mui-slider-group mui-slider-loop">
+                <!-- 添加最后一张假图 -->
+                <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner6.png" /></a></div>
+
+                <div class="mui-slider-item"><a href="#"><img src="./images/banner1.png" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="./images/banner2.png" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="./images/banner3.png" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="./images/banner4.png" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="./images/banner5.png" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="./images/banner6.png" /></a></div>
+                <!-- 添加第一张假图 -->
+                <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner1.png" /></a></div>
+              </div>
+
+              <!-- 指示器 小圆点 -->
+              <div class="mui-slider-indicator">
+                <div class="mui-indicator mui-active"></div>
+                <div class="mui-indicator"></div>
+                <div class="mui-indicator"></div>
+                <div class="mui-indicator"></div>
+                <div class="mui-indicator"></div>
+                <div class="mui-indicator"></div>
+              </div>
+            </div>
+            <!-- 导航区域 -->
+            <div class="lt_nav">
+              <ul class="mui-clearfix">
+                <li><a href="#"><img src="./images/nav1.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/nav2.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/nav3.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/nav4.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/nav5.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/nav6.png" alt=""></a></li>
+              </ul>
+            </div>
+            <!-- 产品区域 -->
+            <div class="lt_product">
+              <ul>
+                <li>
+                  <a href="#">
+                    <img src="./images/product.jpg" alt="">
+                    <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                    <p>
+                      <span class="price">&yen;560</span>
+                      <span class="old_price">&yen;560</span>
+                    </p>
+                    <button class="mui-btn mui-btn-primary">立即购买</button>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/product.jpg" alt="">
+                    <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                    <p>
+                      <span class="price">&yen;560</span>
+                      <span class="old_price">&yen;560</span>
+                    </p>
+                    <button class="mui-btn mui-btn-primary">立即购买</button>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/product.jpg" alt="">
+                    <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                    <p>
+                      <span class="price">&yen;560</span>
+                      <span class="old_price">&yen;560</span>
+                    </p>
+                    <button class="mui-btn mui-btn-primary">立即购买</button>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/product.jpg" alt="">
+                    <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                    <p>
+                      <span class="price">&yen;560</span>
+                      <span class="old_price">&yen;560</span>
+                    </p>
+                    <button class="mui-btn mui-btn-primary">立即购买</button>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/product.jpg" alt="">
+                    <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                    <p>
+                      <span class="price">&yen;560</span>
+                      <span class="old_price">&yen;560</span>
+                    </p>
+                    <button class="mui-btn mui-btn-primary">立即购买</button>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/product.jpg" alt="">
+                    <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                    <p>
+                      <span class="price">&yen;560</span>
+                      <span class="old_price">&yen;560</span>
+                    </p>
+                    <button class="mui-btn mui-btn-primary">立即购买</button>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 页面底部 -->
       <div class="lt_footer">
         <ul>
           <li>
-            <a href="#" class="current">
+            <a href="index.html" class="current">
               <i class="fa fa-home"></i>
               <p>首页</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="category.html">
               <i class="fa fa-bars"></i>
               <p>分类页</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="cart.html">
               <i class="fa fa-shopping-cart"></i>
               <p>购物车</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="user.html">
               <i class="fa fa-user"></i>
               <p>用户中心</p>
             </a>
