--- a/public/front/user.html
+++ b/public/front/user.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./lib/mui/css/mui.css">
   <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
   <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/user.css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -18,35 +19,36 @@
         <a href="javascript:history.go(-1);" class="icon_left">
           <i class="mui-icon mui-icon-back"></i>
         </a>
-        <h3>登录</h3>
+        <h3>会员中心</h3>
       </div>
       <div class="lt_main">
         <div class="mui-scroll-wrapper">
           <div class="mui-scroll">
             <!--这里放置真实显示的DOM内容-->
-            <form class="mui-input-group">
-              <div class="mui-input-row">
-                  <label>用户名</label>
-              <input id="username" 
-                     name="username"
-                     type="text" class="mui-input-clear" placeholder="请输入用户名">
-              </div>
-              <div class="mui-input-row">
-                  <label>密码</label>
-                  <input id="password"                             name="password"                           type="password"                           class="mui-input-password"                placeholder="请输入密码">
-              </div>
-              <div class="mui-button-row">
-                  <button id="loginBtn" type="button" class="mui-btn mui-btn-primary" >登录</button>
-                  <button type="reset" class="mui-btn mui-btn-danger" >重置</button>
-              </div>
-            </form>
+            <ul class="mui-table-view"> 
+                <li class="mui-table-view-cell mui-media">
+                    <!-- 挖个坑 -->
+                </li>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right">账号与安全</a>
+                </li>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right">我的购物车</a>
+                </li>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right">收货地址管理</a>
+                </li>
+            </ul>
+            <div class="btn-wrapper">
+                <button id="loginout" class="mui-btn mui-btn-block">退出</button>
+            </div>
           </div>
         </div>
       </div>
       <div class="lt_footer">
         <ul>
           <li>
-            <a href="index.html" class="current">
+            <a href="index.html">
               <i class="fa fa-home"></i>
               <p>首页</p>
             </a>
@@ -64,7 +66,7 @@
             </a>
           </li>
           <li>
-            <a href="user.html">
+            <a href="user.html"  class="current">
               <i class="fa fa-user"></i>
               <p>用户中心</p>
             </a>
@@ -72,12 +74,21 @@
         </ul>
       </div>
     </div>
+  
+<script type="text/html" id="tpl">
+  <a href="javascript:;">
+      <img class="mui-media-object mui-pull-left" src="./images/user.jpg">
+      <div class="mui-media-body">
+          {{ username }}
+          <p class='mui-ellipsis'>绑定手机: {{ mobile }} </p>
+      </div>
+  </a>
+</script>
 
-    
 <script src="./lib/zepto/zepto.min.js"></script>
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
-<script src="./js/login.js"></script>
+<script src="./js/user.js"></script>
 </body>
 </html>
